# xml-extractors

./: .gitignore  LICENSE  README.md  changelog.md  xml-extractors.cabal
data/: library.xml  test-library.xml  test1.xml
src/: Example.hs  Test.hs
src/Text/XML/Light/: Extractors.hs  Extractors2.hs  Wrapper.hs
src/Text/XML/Light/Extractors/: Err.hs  Extra.hs  Internal.hs  Result.hs  ShowErr.hs
src/Text/XML/Light/Extractors/Internal/: Result.hs
