name:                xml-extractors
version:             0.2.0.0
synopsis:            Simple wrapper over xml (Text.XML.Light) to extract data from parsed xml
-- description:         
homepage:            https://github.com/holmisen/xml-extractors
license:             BSD3
license-file:        LICENSE
author:              Johan Holmquist
maintainer:          holmisen@gmail.com
-- copyright:           
category:            Text, XML
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Text.XML.Light.Extractors, 
                       Text.XML.Light.Extractors.Internal,
                       Text.XML.Light.Extractors.Internal.Result,
                       Text.XML.Light.Extractors.Extra,
                       Text.XML.Light.Extractors.ShowErr
  -- other-modules:       
  other-extensions:    NoMonomorphismRestriction
  build-depends:       base >=4.7 && <4.8,
                       xml >=1.3 && <1.4,
                       mtl >=2.1 && <2.2,
                       transformers >=0.3 && <0.4,
                       safe >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
